fix: getFilteredAppointments metoduna BLOCKED filtresi eklendi